--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,10 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "alfa6661/laravel-autonumber": "^1.2",
+        "barryvdh/laravel-dompdf": "^0.9.0",
         "bmatovu/multi-auth": "^9.0",
         "browner12/helpers": "^3.3",
+        "creativeorange/gravatar": "~1.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
@@ -24,6 +26,7 @@
         "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.5",
         "facade/ignition": "^2.0",
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
